// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`comments properly handle comments 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  class Block1 extends ContentBlock {
    static el = elem(\`<div>hello <!-- comment-->owl</div>\`);
  }
  
  return ctx => {
    const b1 = new Block1();
    return b1;
  }
}"
`;

exports[`comments properly handle comments between t-if/t-else 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  class Block1 extends ContentBlock {
    static el = elem(\`<div><owl-anchor></owl-anchor><owl-anchor></owl-anchor></div>\`);
    children = new Array(2);
  }
  class Block2 extends ContentBlock {
    static el = elem(\`<span>true</span>\`);
  }
  class Block3 extends ContentBlock {
    static el = elem(\`<span>owl</span>\`);
  }
  
  return ctx => {
    const b1 = new Block1();
    if (true) {
      const b2 = b1.children[0] = new Block2();
    } else {
      const b3 = b1.children[1] = new Block3();
    }
    return b1;
  }
}"
`;

exports[`simple templates, mostly static div with a class attribute 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  class Block1 extends ContentBlock {
    static el = elem(\`<div class=\\"abc\\">foo</div>\`);
  }
  
  return ctx => {
    const b1 = new Block1();
    return b1;
  }
}"
`;

exports[`simple templates, mostly static div with a class attribute with a quote 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  class Block1 extends ContentBlock {
    static el = elem(\`<div class=\\"a'bc\\">word</div>\`);
  }
  
  return ctx => {
    const b1 = new Block1();
    return b1;
  }
}"
`;

exports[`simple templates, mostly static div with a span child node 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  class Block1 extends ContentBlock {
    static el = elem(\`<div><span>word</span></div>\`);
  }
  
  return ctx => {
    const b1 = new Block1();
    return b1;
  }
}"
`;

exports[`simple templates, mostly static div with an arbitrary attribute with a quote 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  class Block1 extends ContentBlock {
    static el = elem(\`<div abc=\\"a'bc\\">word</div>\`);
  }
  
  return ctx => {
    const b1 = new Block1();
    return b1;
  }
}"
`;

exports[`simple templates, mostly static div with an empty class attribute 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  class Block1 extends ContentBlock {
    static el = elem(\`<div>word</div>\`);
  }
  
  return ctx => {
    const b1 = new Block1();
    return b1;
  }
}"
`;

exports[`simple templates, mostly static div with content 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  class Block1 extends ContentBlock {
    static el = elem(\`<div>foo</div>\`);
  }
  
  return ctx => {
    const b1 = new Block1();
    return b1;
  }
}"
`;

exports[`simple templates, mostly static dom node with t-esc 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  class Block1 extends ContentBlock {
    static el = elem(\`<div><owl-text></owl-text></div>\`);
    texts = new Array(1);
    update() {
      this.el.firstChild.textContent = toString(this.texts[0]);
    }
  }
  
  return ctx => {
    const b1 = new Block1();
    b1.texts[0] = ctx['text'];
    return b1;
  }
}"
`;

exports[`simple templates, mostly static dynamic text value 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  
  return ctx => {
    const b1 = new TextBlock(ctx['text'])
    return b1;
  }
}"
`;

exports[`simple templates, mostly static empty div 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  class Block1 extends ContentBlock {
    static el = elem(\`<div></div>\`);
  }
  
  return ctx => {
    const b1 = new Block1();
    return b1;
  }
}"
`;

exports[`simple templates, mostly static empty string 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  
  return ctx => {
    const b1 = new TextBlock(\`\`)
    return b1;
  }
}"
`;

exports[`simple templates, mostly static multiple root nodes 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  class Block1 extends ContentBlock {
    static el = elem(\`<div>foo</div>\`);
  }
  class Block2 extends ContentBlock {
    static el = elem(\`<span>hey</span>\`);
  }
  
  return ctx => {
    const b1 = new MultiBlock(2);
    const b2 = b1.children[0] = new Block1();
    const b3 = b1.children[1] = new Block2();
    return b1;
  }
}"
`;

exports[`simple templates, mostly static simple string 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  
  return ctx => {
    const b1 = new TextBlock(\`hello vdom\`)
    return b1;
  }
}"
`;

exports[`simple templates, mostly static simple string in t tag 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  
  return ctx => {
    const b1 = new TextBlock(\`hello vdom\`)
    return b1;
  }
}"
`;

exports[`simple templates, mostly static static text and dynamic text (no t tag) 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  
  return ctx => {
    const b1 = new MultiBlock(2);
    b1.children[0] = new TextBlock(\`hello \`)
    b1.children[1] = new TextBlock(ctx['text'])
    return b1;
  }
}"
`;

exports[`simple templates, mostly static static text and dynamic text 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  
  return ctx => {
    const b1 = new MultiBlock(2);
    b1.children[0] = new TextBlock(\`hello \`)
    b1.children[1] = new TextBlock(ctx['text'])
    return b1;
  }
}"
`;

exports[`simple templates, mostly static t-esc in dom node 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  class Block1 extends ContentBlock {
    static el = elem(\`<div><owl-text></owl-text></div>\`);
    texts = new Array(1);
    update() {
      this.el.firstChild.textContent = toString(this.texts[0]);
    }
  }
  
  return ctx => {
    const b1 = new Block1();
    b1.texts[0] = ctx['text'];
    return b1;
  }
}"
`;

exports[`simple templates, mostly static t-esc in dom node, variations 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  class Block1 extends ContentBlock {
    static el = elem(\`<div>hello <owl-text></owl-text></div>\`);
    texts = new Array(1);
    update() {
      this.el.firstChild.nextSibling.textContent = toString(this.texts[0]);
    }
  }
  
  return ctx => {
    const b1 = new Block1();
    b1.texts[0] = ctx['text'];
    return b1;
  }
}"
`;

exports[`simple templates, mostly static t-esc in dom node, variations 2`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  class Block1 extends ContentBlock {
    static el = elem(\`<div>hello <owl-text></owl-text> world</div>\`);
    texts = new Array(1);
    update() {
      this.el.firstChild.nextSibling.textContent = toString(this.texts[0]);
    }
  }
  
  return ctx => {
    const b1 = new Block1();
    b1.texts[0] = ctx['text'];
    return b1;
  }
}"
`;

exports[`simple templates, mostly static two t-escs next to each other 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  
  return ctx => {
    const b1 = new MultiBlock(2);
    b1.children[0] = new TextBlock(ctx['text1'])
    b1.children[1] = new TextBlock(ctx['text2'])
    return b1;
  }
}"
`;

exports[`simple templates, mostly static two t-escs next to each other, in a div 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  class Block1 extends ContentBlock {
    static el = elem(\`<div><owl-text></owl-text><owl-text></owl-text></div>\`);
    texts = new Array(2);
    update() {
      this.el.firstChild.textContent = toString(this.texts[0]);
      this.el.firstChild.nextSibling.textContent = toString(this.texts[1]);
    }
  }
  
  return ctx => {
    const b1 = new Block1();
    b1.texts[0] = ctx['text1'];
    b1.texts[1] = ctx['text2'];
    return b1;
  }
}"
`;

exports[`t-call (template calling) basic caller 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  class Block1 extends ContentBlock {
    static el = elem(\`<div><owl-anchor></owl-anchor></div>\`);
    children = new Array(1);
  }
  
  return ctx => {
    const b1 = new Block1();
    b1.children[0] = call(\`_basic-callee\`, ctx);
    return b1;
  }
}"
`;

exports[`t-call (template calling) basic caller, no parent node 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  
  return ctx => {
    const b1 = call(\`_basic-callee\`, ctx);
    return b1;
  }
}"
`;

exports[`t-call (template calling) call with several sub nodes on same line 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  class Block1 extends ContentBlock {
    static el = elem(\`<div><owl-anchor></owl-anchor></div>\`);
    children = new Array(1);
  }
  
  return ctx => {
    const b1 = new Block1();
    b1.children[0] = new HTMLBlock(ctx[zero]);
    return b1;
  }
}"
`;

exports[`t-call (template calling) call with several sub nodes on same line 2`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  class Block1 extends ContentBlock {
    static el = elem(\`<div><owl-anchor></owl-anchor></div>\`);
    children = new Array(1);
  }
  class Block2 extends ContentBlock {
    static el = elem(\`<span>hey</span>\`);
  }
  class Block3 extends ContentBlock {
    static el = elem(\`<span>yay</span>\`);
  }
  
  return ctx => {
    const b1 = new Block1();
    ctx = Object.create(ctx);
    const b2 = new MultiBlock(3);
    const b3 = b2.children[0] = new Block2();
    b2.children[1] = new TextBlock(\` \`)
    const b4 = b2.children[2] = new Block3();
    ctx[zero] = b2;
    b1.children[0] = call(\`sub\`, ctx);
    return b1;
  }
}"
`;

exports[`t-call (template calling) cascading t-call t-raw='0' 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  class Block1 extends ContentBlock {
    static el = elem(\`<div><span>cascade 2</span><owl-anchor></owl-anchor></div>\`);
    children = new Array(1);
  }
  
  return ctx => {
    const b1 = new Block1();
    b1.children[0] = new HTMLBlock(ctx[zero]);
    return b1;
  }
}"
`;

exports[`t-call (template calling) cascading t-call t-raw='0' 2`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  class Block1 extends ContentBlock {
    static el = elem(\`<div><owl-anchor></owl-anchor></div>\`);
    children = new Array(1);
  }
  class Block2 extends ContentBlock {
    static el = elem(\`<span>cascade 0</span>\`);
  }
  
  return ctx => {
    const b1 = new Block1();
    ctx = Object.create(ctx);
    const b2 = new MultiBlock(2);
    const b3 = b2.children[0] = new Block2();
    b2.children[1] = new HTMLBlock(ctx[zero]);
    ctx[zero] = b2;
    b1.children[0] = call(\`subSubTemplate\`, ctx);
    return b1;
  }
}"
`;

exports[`t-call (template calling) cascading t-call t-raw='0' 3`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  class Block1 extends ContentBlock {
    static el = elem(\`<div><owl-anchor></owl-anchor></div>\`);
    children = new Array(1);
  }
  class Block2 extends ContentBlock {
    static el = elem(\`<span>cascade 1</span>\`);
  }
  
  return ctx => {
    const b1 = new Block1();
    ctx = Object.create(ctx);
    const b2 = new MultiBlock(2);
    const b3 = b2.children[0] = new Block2();
    b2.children[1] = new HTMLBlock(ctx[zero]);
    ctx[zero] = b2;
    b1.children[0] = call(\`finalTemplate\`, ctx);
    return b1;
  }
}"
`;

exports[`t-call (template calling) cascading t-call t-raw='0' 4`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  class Block1 extends ContentBlock {
    static el = elem(\`<div><owl-anchor></owl-anchor></div>\`);
    children = new Array(1);
  }
  class Block2 extends ContentBlock {
    static el = elem(\`<span>hey</span>\`);
  }
  class Block3 extends ContentBlock {
    static el = elem(\`<span>yay</span>\`);
  }
  
  return ctx => {
    const b1 = new Block1();
    ctx = Object.create(ctx);
    const b2 = new MultiBlock(3);
    const b3 = b2.children[0] = new Block2();
    b2.children[1] = new TextBlock(\` \`)
    const b4 = b2.children[2] = new Block3();
    ctx[zero] = b2;
    b1.children[0] = call(\`subTemplate\`, ctx);
    return b1;
  }
}"
`;

exports[`t-call (template calling) cascading t-call t-raw='0', without external divs 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  class Block1 extends ContentBlock {
    static el = elem(\`<span>cascade 2</span>\`);
  }
  
  return ctx => {
    const b1 = new MultiBlock(2);
    const b2 = b1.children[0] = new Block1();
    b1.children[1] = new HTMLBlock(ctx[zero]);
    return b1;
  }
}"
`;

exports[`t-call (template calling) cascading t-call t-raw='0', without external divs 2`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  class Block1 extends ContentBlock {
    static el = elem(\`<span>cascade 0</span>\`);
  }
  
  return ctx => {
    ctx = Object.create(ctx);
    const b1 = new MultiBlock(2);
    const b2 = b1.children[0] = new Block1();
    b1.children[1] = new HTMLBlock(ctx[zero]);
    ctx[zero] = b1;
    const b3 = call(\`subSubTemplate\`, ctx);
    return b3;
  }
}"
`;

exports[`t-call (template calling) cascading t-call t-raw='0', without external divs 3`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  class Block1 extends ContentBlock {
    static el = elem(\`<span>cascade 1</span>\`);
  }
  
  return ctx => {
    ctx = Object.create(ctx);
    const b1 = new MultiBlock(2);
    const b2 = b1.children[0] = new Block1();
    b1.children[1] = new HTMLBlock(ctx[zero]);
    ctx[zero] = b1;
    const b3 = call(\`finalTemplate\`, ctx);
    return b3;
  }
}"
`;

exports[`t-call (template calling) cascading t-call t-raw='0', without external divs 4`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  class Block1 extends ContentBlock {
    static el = elem(\`<span>hey</span>\`);
  }
  class Block2 extends ContentBlock {
    static el = elem(\`<span>yay</span>\`);
  }
  
  return ctx => {
    ctx = Object.create(ctx);
    const b1 = new MultiBlock(3);
    const b2 = b1.children[0] = new Block1();
    b1.children[1] = new TextBlock(\` \`)
    const b3 = b1.children[2] = new Block2();
    ctx[zero] = b1;
    const b4 = call(\`subTemplate\`, ctx);
    return b4;
  }
}"
`;

exports[`t-call (template calling) inherit context 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  class Block1 extends ContentBlock {
    static el = elem(\`<div><owl-anchor></owl-anchor></div>\`);
    children = new Array(1);
  }
  
  return ctx => {
    ctx = Object.create(ctx);
    const b1 = new Block1();
    ctx[\`foo\`] = 1;
    b1.children[0] = call(\`sub\`, ctx);
    return b1;
  }
}"
`;

exports[`t-call (template calling) recursive template, part 1 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  class Block1 extends ContentBlock {
    static el = elem(\`<div><span>hey</span><owl-anchor></owl-anchor></div>\`);
    children = new Array(1);
  }
  
  return ctx => {
    const b1 = new Block1();
    if (false) {
      b1.children[0] = call(\`recursive\`, ctx);
    }
    return b1;
  }
}"
`;

exports[`t-call (template calling) scoped parameters 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  class Block1 extends ContentBlock {
    static el = elem(\`<div><owl-anchor></owl-anchor><owl-text></owl-text></div>\`);
    children = new Array(1);
    texts = new Array(1);
    update() {
      this.anchors[0].nextSibling.textContent = toString(this.texts[0]);
    }
  }
  
  return ctx => {
    ctx = Object.create(ctx);
    const b1 = new Block1();
    ctx = Object.create(ctx);
    ctx[\`foo\`] = 42;
    b1.children[0] = call(\`sub\`, ctx);
    ctx = ctx.__proto__;
    b1.texts[0] = ctx['foo'];
    return b1;
  }
}"
`;

exports[`t-call (template calling) scoped parameters, part 2 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  class Block1 extends ContentBlock {
    static el = elem(\`<div><owl-anchor></owl-anchor><owl-text></owl-text></div>\`);
    children = new Array(1);
    texts = new Array(1);
    update() {
      this.anchors[0].nextSibling.textContent = toString(this.texts[0]);
    }
  }
  
  return ctx => {
    ctx = Object.create(ctx);
    const b1 = new Block1();
    ctx[\`foo\`] = 11;
    ctx = Object.create(ctx);
    ctx[\`foo\`] = 42;
    b1.children[0] = call(\`sub\`, ctx);
    ctx = ctx.__proto__;
    b1.texts[0] = ctx['foo'];
    return b1;
  }
}"
`;

exports[`t-call (template calling) t-call allowed on a non t node 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  class Block1 extends ContentBlock {
    static el = elem(\`<div><owl-anchor></owl-anchor></div>\`);
    children = new Array(1);
  }
  
  return ctx => {
    const b1 = new Block1();
    b1.children[0] = call(\`sub\`, ctx);
    return b1;
  }
}"
`;

exports[`t-call (template calling) t-call with t-if 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  class Block1 extends ContentBlock {
    static el = elem(\`<div><owl-anchor></owl-anchor></div>\`);
    children = new Array(1);
  }
  
  return ctx => {
    const b1 = new Block1();
    if (ctx['flag']) {
      b1.children[0] = call(\`sub\`, ctx);
    }
    return b1;
  }
}"
`;

exports[`t-call (template calling) t-call, conditional and t-set in t-call body 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  class Block1 extends ContentBlock {
    static el = elem(\`<div><owl-anchor></owl-anchor><owl-anchor></owl-anchor></div>\`);
    children = new Array(2);
  }
  
  return ctx => {
    ctx = Object.create(ctx);
    const b1 = new Block1();
    ctx[\`v1\`] = 'elif';
    if (ctx['v1']==='if') {
      b1.children[0] = call(\`callee1\`, ctx);
    } else if (ctx['v1']==='elif') {
      ctx = Object.create(ctx);
      ctx[\`v\`] = 'success';
      b1.children[1] = call(\`callee2\`, ctx);
      ctx = ctx.__proto__;
    }
    return b1;
  }
}"
`;

exports[`t-call (template calling) t-esc inside t-call, with t-set outside 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  class Block1 extends ContentBlock {
    static el = elem(\`<div><owl-anchor></owl-anchor></div>\`);
    children = new Array(1);
  }
  
  return ctx => {
    ctx = Object.create(ctx);
    const b1 = new Block1();
    ctx[\`v\`] = \`Hi\`;
    b1.children[0] = call(\`sub\`, ctx);
    return b1;
  }
}"
`;

exports[`t-call (template calling) with unused body 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  
  return ctx => {
    ctx = Object.create(ctx);
    const b1 = new TextBlock(\`WHEEE\`)
    ctx[zero] = b1;
    const b2 = call(\`sub\`, ctx);
    return b2;
  }
}"
`;

exports[`t-call (template calling) with unused setbody 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  
  return ctx => {
    ctx = Object.create(ctx);
    ctx = Object.create(ctx);
    ctx[\`qux\`] = 3;
    const b1 = call(\`sub\`, ctx);
    return b1;
  }
}"
`;

exports[`t-call (template calling) with used body 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  
  return ctx => {
    ctx = Object.create(ctx);
    const b1 = new TextBlock(\`ok\`)
    ctx[zero] = b1;
    const b2 = call(\`sub\`, ctx);
    return b2;
  }
}"
`;

exports[`t-call (template calling) with used body 2`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  class Block1 extends ContentBlock {
    static el = elem(\`<h1><owl-text></owl-text></h1>\`);
    texts = new Array(1);
    update() {
      this.el.firstChild.textContent = this.texts[0];
    }
  }
  
  return ctx => {
    const b1 = new Block1();
    b1.texts[0] = ctx[zero];
    return b1;
  }
}"
`;

exports[`t-call (template calling) with used setbody 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  class Block1 extends ContentBlock {
    static el = elem(\`<span><owl-anchor></owl-anchor></span>\`);
    children = new Array(1);
  }
  
  return ctx => {
    ctx = Object.create(ctx);
    const b1 = new Block1();
    ctx = Object.create(ctx);
    ctx[\`foo\`] = 'ok';
    b1.children[0] = call(\`sub\`, ctx);
    return b1;
  }
}"
`;

exports[`t-esc div with falsy values 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  class Block1 extends ContentBlock {
    static el = elem(\`<div><p><owl-text></owl-text></p><p><owl-text></owl-text></p><p><owl-text></owl-text></p><p><owl-text></owl-text></p><p><owl-text></owl-text></p></div>\`);
    texts = new Array(5);
    update() {
      this.el.firstChild.firstChild.textContent = toString(this.texts[0]);
      this.el.firstChild.nextSibling.firstChild.textContent = toString(this.texts[1]);
      this.el.firstChild.nextSibling.nextSibling.firstChild.textContent = toString(this.texts[2]);
      this.el.firstChild.nextSibling.nextSibling.nextSibling.firstChild.textContent = toString(this.texts[3]);
      this.el.firstChild.nextSibling.nextSibling.nextSibling.nextSibling.firstChild.textContent = toString(this.texts[4]);
    }
  }
  
  return ctx => {
    const b1 = new Block1();
    b1.texts[0] = ctx['v1'];
    b1.texts[1] = ctx['v2'];
    b1.texts[2] = ctx['v3'];
    b1.texts[3] = ctx['v4'];
    b1.texts[4] = ctx['v5'];
    return b1;
  }
}"
`;

exports[`t-esc escaping 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  class Block1 extends ContentBlock {
    static el = elem(\`<span><owl-text></owl-text></span>\`);
    texts = new Array(1);
    update() {
      this.el.firstChild.textContent = toString(this.texts[0]);
    }
  }
  
  return ctx => {
    const b1 = new Block1();
    b1.texts[0] = ctx['var'];
    return b1;
  }
}"
`;

exports[`t-esc escaping on a node 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  class Block1 extends ContentBlock {
    static el = elem(\`<span><owl-text></owl-text></span>\`);
    texts = new Array(1);
    update() {
      this.el.firstChild.textContent = toString(this.texts[0]);
    }
  }
  
  return ctx => {
    const b1 = new Block1();
    b1.texts[0] = 'ok';
    return b1;
  }
}"
`;

exports[`t-esc escaping on a node with a body 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  class Block1 extends ContentBlock {
    static el = elem(\`<span><owl-text></owl-text></span>\`);
    texts = new Array(1);
    update() {
      this.el.firstChild.textContent = toString(this.texts[0]);
    }
  }
  
  return ctx => {
    const b1 = new Block1();
    b1.texts[0] = withDefault('ok', \`nope\`);
    return b1;
  }
}"
`;

exports[`t-esc escaping on a node with a body, as a default 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  class Block1 extends ContentBlock {
    static el = elem(\`<span><owl-text></owl-text></span>\`);
    texts = new Array(1);
    update() {
      this.el.firstChild.textContent = toString(this.texts[0]);
    }
  }
  
  return ctx => {
    const b1 = new Block1();
    b1.texts[0] = withDefault(ctx['var'], \`nope\`);
    return b1;
  }
}"
`;

exports[`t-esc literal 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  class Block1 extends ContentBlock {
    static el = elem(\`<span><owl-text></owl-text></span>\`);
    texts = new Array(1);
    update() {
      this.el.firstChild.textContent = toString(this.texts[0]);
    }
  }
  
  return ctx => {
    const b1 = new Block1();
    b1.texts[0] = 'ok';
    return b1;
  }
}"
`;

exports[`t-esc t-esc is escaped 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  class Block1 extends ContentBlock {
    static el = elem(\`<div><owl-text></owl-text></div>\`);
    texts = new Array(1);
    update() {
      this.el.firstChild.textContent = toString(this.texts[0]);
    }
  }
  class Block2 extends ContentBlock {
    static el = elem(\`<p>escaped</p>\`);
  }
  
  return ctx => {
    ctx = Object.create(ctx);
    const b1 = new Block1();
    const b2 = new Block2();
    ctx[\`var\`] = b2;
    b1.texts[0] = ctx['var'];
    return b1;
  }
}"
`;

exports[`t-esc t-esc work with spread operator 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  class Block1 extends ContentBlock {
    static el = elem(\`<span><owl-text></owl-text></span>\`);
    texts = new Array(1);
    update() {
      this.el.firstChild.textContent = toString(this.texts[0]);
    }
  }
  
  return ctx => {
    const b1 = new Block1();
    b1.texts[0] = [...ctx['state'].list];
    return b1;
  }
}"
`;

exports[`t-esc t-esc=0 is escaped 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  class Block1 extends ContentBlock {
    static el = elem(\`<div><owl-anchor></owl-anchor></div>\`);
    children = new Array(1);
  }
  class Block2 extends ContentBlock {
    static el = elem(\`<p>escaped</p>\`);
  }
  
  return ctx => {
    const b1 = new Block1();
    ctx = Object.create(ctx);
    const b2 = new Block2();
    ctx[zero] = b2;
    b1.children[0] = call(\`sub\`, ctx);
    return b1;
  }
}"
`;

exports[`t-esc t-esc=0 is escaped 2`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  class Block1 extends ContentBlock {
    static el = elem(\`<span><owl-text></owl-text></span>\`);
    texts = new Array(1);
    update() {
      this.el.firstChild.textContent = this.texts[0];
    }
  }
  
  return ctx => {
    const b1 = new Block1();
    b1.texts[0] = ctx[zero];
    return b1;
  }
}"
`;

exports[`t-esc variable 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  class Block1 extends ContentBlock {
    static el = elem(\`<span><owl-text></owl-text></span>\`);
    texts = new Array(1);
    update() {
      this.el.firstChild.textContent = toString(this.texts[0]);
    }
  }
  
  return ctx => {
    const b1 = new Block1();
    b1.texts[0] = ctx['var'];
    return b1;
  }
}"
`;

exports[`t-foreach iterate on items (on a element node) 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  class Block1 extends ContentBlock {
    static el = elem(\`<div><owl-anchor></owl-anchor></div>\`);
    children = new Array(1);
  }
  class Block2 extends ContentBlock {
    static el = elem(\`<span><owl-text></owl-text></span>\`);
    texts = new Array(1);
    update() {
      this.el.firstChild.textContent = toString(this.texts[0]);
    }
  }
  
  return ctx => {
    const b1 = new Block1();
    const [v2, k2, l2] = getValues([1,2]);
    const b3 = b1.children[0] = new CollectionBlock(l2);
    for (let i = 0; i < l2; i++) {
      ctx[\`item\`] = v2[i];
      ctx[\`item_first\`] = i === 0;
      ctx[\`item_last\`] = i === v2.length - 1;
      ctx[\`item_index\`] = i;
      ctx[\`item_value\`] = k2[i];
      const k4 = ctx['item'];
      const b5 = b3.children[i] = new Block2();
      b5.texts[0] = ctx['item'];
    }
    return b1;
  }
}"
`;

exports[`t-foreach iterate on items 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  class Block1 extends ContentBlock {
    static el = elem(\`<div><owl-anchor></owl-anchor></div>\`);
    children = new Array(1);
  }
  
  return ctx => {
    const b1 = new Block1();
    const [v2, k2, l2] = getValues([3,2,1]);
    const b3 = b1.children[0] = new CollectionBlock(l2);
    for (let i = 0; i < l2; i++) {
      ctx[\`item\`] = v2[i];
      ctx[\`item_first\`] = i === 0;
      ctx[\`item_last\`] = i === v2.length - 1;
      ctx[\`item_index\`] = i;
      ctx[\`item_value\`] = k2[i];
      const b4 = b3.children[i] = new MultiBlock(7);
      b4.children[0] = new TextBlock(\` [\`)
      b4.children[1] = new TextBlock(ctx['item_index'])
      b4.children[2] = new TextBlock(\`: \`)
      b4.children[3] = new TextBlock(ctx['item'])
      b4.children[4] = new TextBlock(\` \`)
      b4.children[5] = new TextBlock(ctx['item_value'])
      b4.children[6] = new TextBlock(\`] \`)
    }
    return b1;
  }
}"
`;

exports[`t-foreach iterate, dict param 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  class Block1 extends ContentBlock {
    static el = elem(\`<div><owl-anchor></owl-anchor></div>\`);
    children = new Array(1);
  }
  
  return ctx => {
    const b1 = new Block1();
    const [v2, k2, l2] = getValues(ctx['value']);
    const b3 = b1.children[0] = new CollectionBlock(l2);
    for (let i = 0; i < l2; i++) {
      ctx[\`item\`] = v2[i];
      ctx[\`item_first\`] = i === 0;
      ctx[\`item_last\`] = i === v2.length - 1;
      ctx[\`item_index\`] = i;
      ctx[\`item_value\`] = k2[i];
      const b4 = b3.children[i] = new MultiBlock(7);
      b4.children[0] = new TextBlock(\` [\`)
      b4.children[1] = new TextBlock(ctx['item_index'])
      b4.children[2] = new TextBlock(\`: \`)
      b4.children[3] = new TextBlock(ctx['item'])
      b4.children[4] = new TextBlock(\` \`)
      b4.children[5] = new TextBlock(ctx['item_value'])
      b4.children[6] = new TextBlock(\`] \`)
    }
    return b1;
  }
}"
`;

exports[`t-foreach iterate, position 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  class Block1 extends ContentBlock {
    static el = elem(\`<div><owl-anchor></owl-anchor></div>\`);
    children = new Array(1);
  }
  
  return ctx => {
    const b1 = new Block1();
    const [v2, k2, l2] = getValues(Array(5));
    const b3 = b1.children[0] = new CollectionBlock(l2);
    for (let i = 0; i < l2; i++) {
      ctx[\`elem\`] = v2[i];
      ctx[\`elem_first\`] = i === 0;
      ctx[\`elem_last\`] = i === v2.length - 1;
      ctx[\`elem_index\`] = i;
      ctx[\`elem_value\`] = k2[i];
      const b4 = b3.children[i] = new MultiBlock(6);
      b4.children[0] = new TextBlock(\` -\`)
      if (ctx['elem_first']) {
        b4.children[1] = new TextBlock(\` first\`)
      }
      if (ctx['elem_last']) {
        b4.children[2] = new TextBlock(\` last\`)
      }
      b4.children[3] = new TextBlock(\` (\`)
      b4.children[4] = new TextBlock(ctx['elem_index'])
      b4.children[5] = new TextBlock(\`) \`)
    }
    return b1;
  }
}"
`;

exports[`t-foreach simple iteration 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  class Block1 extends ContentBlock {
    static el = elem(\`<div><owl-anchor></owl-anchor></div>\`);
    children = new Array(1);
  }
  
  return ctx => {
    const b1 = new Block1();
    const [v2, k2, l2] = getValues([3,2,1]);
    const b3 = b1.children[0] = new CollectionBlock(l2);
    for (let i = 0; i < l2; i++) {
      ctx[\`item\`] = v2[i];
      ctx[\`item_first\`] = i === 0;
      ctx[\`item_last\`] = i === v2.length - 1;
      ctx[\`item_index\`] = i;
      ctx[\`item_value\`] = k2[i];
      b3.children[i] = new TextBlock(ctx['item'])
    }
    return b1;
  }
}"
`;

exports[`t-if a t-if next to a div 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  class Block1 extends ContentBlock {
    static el = elem(\`<div>foo</div>\`);
  }
  
  return ctx => {
    const b1 = new MultiBlock(2);
    const b2 = b1.children[0] = new Block1();
    if (ctx['cond']) {
      b1.children[1] = new TextBlock(\`1\`)
    }
    return b1;
  }
}"
`;

exports[`t-if a t-if with two inner nodes 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  class Block1 extends ContentBlock {
    static el = elem(\`<span>yip</span>\`);
  }
  class Block2 extends ContentBlock {
    static el = elem(\`<div>yip</div>\`);
  }
  
  return ctx => {
    const b1 = new MultiBlock(1);
    if (ctx['condition']) {
      const b2 = b1.children[0] = new MultiBlock(2);
      const b3 = b2.children[0] = new Block1();
      const b4 = b2.children[1] = new Block2();
    }
    return b1;
  }
}"
`;

exports[`t-if boolean value condition elif (no outside node) 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  
  return ctx => {
    const b1 = new MultiBlock(4);
    if (ctx['color']=='black') {
      b1.children[0] = new TextBlock(\`black pearl\`)
    } else if (ctx['color']=='yellow') {
      b1.children[1] = new TextBlock(\`yellow submarine\`)
    } else if (ctx['color']=='red') {
      b1.children[2] = new TextBlock(\`red is dead\`)
    } else {
      b1.children[3] = new TextBlock(\`beer\`)
    }
    return b1;
  }
}"
`;

exports[`t-if boolean value condition elif 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  class Block1 extends ContentBlock {
    static el = elem(\`<div><owl-anchor></owl-anchor><owl-anchor></owl-anchor><owl-anchor></owl-anchor><owl-anchor></owl-anchor></div>\`);
    children = new Array(4);
  }
  
  return ctx => {
    const b1 = new Block1();
    if (ctx['color']=='black') {
      b1.children[0] = new TextBlock(\`black pearl\`)
    } else if (ctx['color']=='yellow') {
      b1.children[1] = new TextBlock(\`yellow submarine\`)
    } else if (ctx['color']=='red') {
      b1.children[2] = new TextBlock(\`red is dead\`)
    } else {
      b1.children[3] = new TextBlock(\`beer\`)
    }
    return b1;
  }
}"
`;

exports[`t-if boolean value condition else 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  class Block1 extends ContentBlock {
    static el = elem(\`<div><span>begin</span><owl-anchor></owl-anchor><owl-anchor></owl-anchor><span>end</span></div>\`);
    children = new Array(2);
  }
  
  return ctx => {
    const b1 = new Block1();
    if (ctx['condition']) {
      b1.children[0] = new TextBlock(\`ok\`)
    } else {
      b1.children[1] = new TextBlock(\`ok-else\`)
    }
    return b1;
  }
}"
`;

exports[`t-if boolean value condition false else 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  class Block1 extends ContentBlock {
    static el = elem(\`<div><span>begin</span><owl-anchor></owl-anchor><owl-anchor></owl-anchor><span>end</span></div>\`);
    children = new Array(2);
  }
  
  return ctx => {
    const b1 = new Block1();
    if (ctx['condition']) {
      b1.children[0] = new TextBlock(\`fail\`)
    } else {
      b1.children[1] = new TextBlock(\`fail-else\`)
    }
    return b1;
  }
}"
`;

exports[`t-if can use some boolean operators in expressions 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  class Block1 extends ContentBlock {
    static el = elem(\`<div><owl-anchor></owl-anchor><owl-anchor></owl-anchor><owl-anchor></owl-anchor><owl-anchor></owl-anchor><owl-anchor></owl-anchor><owl-anchor></owl-anchor><owl-anchor></owl-anchor><owl-anchor></owl-anchor></div>\`);
    children = new Array(8);
  }
  
  return ctx => {
    const b1 = new Block1();
    if (ctx['cond1']&&ctx['cond2']) {
      b1.children[0] = new TextBlock(\`and\`)
    }
    if (ctx['cond1']&&ctx['cond3']) {
      b1.children[1] = new TextBlock(\`nope\`)
    }
    if (ctx['cond1']||ctx['cond3']) {
      b1.children[2] = new TextBlock(\`or\`)
    }
    if (ctx['cond3']||ctx['cond4']) {
      b1.children[3] = new TextBlock(\`nope\`)
    }
    if (ctx['m']>3) {
      b1.children[4] = new TextBlock(\`mgt\`)
    }
    if (ctx['n']>3) {
      b1.children[5] = new TextBlock(\`ngt\`)
    }
    if (ctx['m']<3) {
      b1.children[6] = new TextBlock(\`mlt\`)
    }
    if (ctx['n']<3) {
      b1.children[7] = new TextBlock(\`nlt\`)
    }
    return b1;
  }
}"
`;

exports[`t-if div containing a t-if with two inner nodes 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  class Block1 extends ContentBlock {
    static el = elem(\`<div><owl-anchor></owl-anchor></div>\`);
    children = new Array(1);
  }
  class Block2 extends ContentBlock {
    static el = elem(\`<span>yip</span>\`);
  }
  class Block3 extends ContentBlock {
    static el = elem(\`<div>yip</div>\`);
  }
  
  return ctx => {
    const b1 = new Block1();
    if (ctx['condition']) {
      const b2 = b1.children[0] = new MultiBlock(2);
      const b3 = b2.children[0] = new Block2();
      const b4 = b2.children[1] = new Block3();
    }
    return b1;
  }
}"
`;

exports[`t-if dynamic content after t-if with two children nodes 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  class Block1 extends ContentBlock {
    static el = elem(\`<div><owl-anchor></owl-anchor><owl-text></owl-text></div>\`);
    children = new Array(1);
    texts = new Array(1);
    update() {
      this.anchors[0].nextSibling.textContent = toString(this.texts[0]);
    }
  }
  class Block2 extends ContentBlock {
    static el = elem(\`<p>1</p>\`);
  }
  class Block3 extends ContentBlock {
    static el = elem(\`<p>2</p>\`);
  }
  
  return ctx => {
    const b1 = new Block1();
    if (ctx['condition']) {
      const b2 = b1.children[0] = new MultiBlock(2);
      const b3 = b2.children[0] = new Block2();
      const b4 = b2.children[1] = new Block3();
    }
    b1.texts[0] = ctx['text'];
    return b1;
  }
}"
`;

exports[`t-if just a t-if 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  
  return ctx => {
    const b1 = new MultiBlock(1);
    if (ctx['condition']) {
      b1.children[0] = new TextBlock(\`ok\`)
    }
    return b1;
  }
}"
`;

exports[`t-if simple t-if/t-else 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  
  return ctx => {
    const b1 = new MultiBlock(2);
    if (ctx['condition']) {
      b1.children[0] = new TextBlock(\`1\`)
    } else {
      b1.children[1] = new TextBlock(\`2\`)
    }
    return b1;
  }
}"
`;

exports[`t-if simple t-if/t-else in a div 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  class Block1 extends ContentBlock {
    static el = elem(\`<div><owl-anchor></owl-anchor><owl-anchor></owl-anchor></div>\`);
    children = new Array(2);
  }
  
  return ctx => {
    const b1 = new Block1();
    if (ctx['condition']) {
      b1.children[0] = new TextBlock(\`1\`)
    } else {
      b1.children[1] = new TextBlock(\`2\`)
    }
    return b1;
  }
}"
`;

exports[`t-if t-esc with t-elif 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  class Block1 extends ContentBlock {
    static el = elem(\`<div><owl-anchor></owl-anchor><owl-anchor></owl-anchor></div>\`);
    children = new Array(2);
  }
  
  return ctx => {
    const b1 = new Block1();
    if (false) {
      b1.children[0] = new TextBlock(\`abc\`)
    } else {
      b1.children[1] = new TextBlock('x')
    }
    return b1;
  }
}"
`;

exports[`t-if t-esc with t-if 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  class Block1 extends ContentBlock {
    static el = elem(\`<div><owl-anchor></owl-anchor></div>\`);
    children = new Array(1);
  }
  
  return ctx => {
    const b1 = new Block1();
    if (true) {
      b1.children[0] = new TextBlock('x')
    }
    return b1;
  }
}"
`;

exports[`t-if t-if and t-else with two nodes 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  class Block1 extends ContentBlock {
    static el = elem(\`<span>a</span>\`);
  }
  class Block2 extends ContentBlock {
    static el = elem(\`<span>b</span>\`);
  }
  
  return ctx => {
    const b1 = new MultiBlock(2);
    if (ctx['condition']) {
      b1.children[0] = new TextBlock(\`1\`)
    } else {
      const b2 = b1.children[1] = new MultiBlock(2);
      const b3 = b2.children[0] = new Block1();
      const b4 = b2.children[1] = new Block2();
    }
    return b1;
  }
}"
`;

exports[`t-if t-if in a div 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  class Block1 extends ContentBlock {
    static el = elem(\`<div><owl-anchor></owl-anchor></div>\`);
    children = new Array(1);
  }
  
  return ctx => {
    const b1 = new Block1();
    if (ctx['condition']) {
      b1.children[0] = new TextBlock(\`ok\`)
    }
    return b1;
  }
}"
`;

exports[`t-if t-if in a t-if 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  class Block1 extends ContentBlock {
    static el = elem(\`<div><owl-anchor></owl-anchor></div>\`);
    children = new Array(1);
  }
  class Block2 extends ContentBlock {
    static el = elem(\`<span>1<owl-anchor></owl-anchor></span>\`);
    children = new Array(1);
  }
  
  return ctx => {
    const b1 = new Block1();
    if (ctx['cond1']) {
      const b2 = b1.children[0] = new Block2();
      if (ctx['cond2']) {
        b2.children[0] = new TextBlock(\`2\`)
      }
    }
    return b1;
  }
}"
`;

exports[`t-if t-set, then t-if 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  class Block1 extends ContentBlock {
    static el = elem(\`<div><owl-anchor></owl-anchor></div>\`);
    children = new Array(1);
  }
  
  return ctx => {
    ctx = Object.create(ctx);
    const b1 = new Block1();
    ctx[\`title\`] = 'test';
    if (ctx['title']) {
      b1.children[0] = new TextBlock(ctx['title'])
    }
    return b1;
  }
}"
`;

exports[`t-if t-set, then t-if, part 2 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  class Block1 extends ContentBlock {
    static el = elem(\`<div><owl-anchor></owl-anchor></div>\`);
    children = new Array(1);
  }
  class Block2 extends ContentBlock {
    static el = elem(\`<span>COUCOU</span>\`);
  }
  
  return ctx => {
    ctx = Object.create(ctx);
    const b1 = new Block1();
    ctx[\`y\`] = true;
    ctx[\`x\`] = ctx['y'];
    if (ctx['x']) {
      const b2 = b1.children[0] = new Block2();
    }
    return b1;
  }
}"
`;

exports[`t-if t-set, then t-if, part 3 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  class Block1 extends ContentBlock {
    static el = elem(\`<div><owl-anchor></owl-anchor><owl-anchor></owl-anchor></div>\`);
    children = new Array(2);
  }
  class Block2 extends ContentBlock {
    static el = elem(\`<span>AAA</span>\`);
  }
  class Block3 extends ContentBlock {
    static el = elem(\`<span>BBB</span>\`);
  }
  
  return ctx => {
    ctx = Object.create(ctx);
    const b1 = new Block1();
    ctx[\`y\`] = false;
    ctx[\`x\`] = ctx['y'];
    if (ctx['x']) {
      const b2 = b1.children[0] = new Block2();
    } else if (!ctx['x']) {
      const b3 = b1.children[1] = new Block3();
    }
    return b1;
  }
}"
`;

exports[`t-if two consecutive t-if 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  
  return ctx => {
    const b1 = new MultiBlock(2);
    if (ctx['cond1']) {
      b1.children[0] = new TextBlock(\`1\`)
    }
    if (ctx['cond2']) {
      b1.children[1] = new TextBlock(\`2\`)
    }
    return b1;
  }
}"
`;

exports[`t-if two consecutive t-if in a div 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  class Block1 extends ContentBlock {
    static el = elem(\`<div><owl-anchor></owl-anchor><owl-anchor></owl-anchor></div>\`);
    children = new Array(2);
  }
  
  return ctx => {
    const b1 = new Block1();
    if (ctx['cond1']) {
      b1.children[0] = new TextBlock(\`1\`)
    }
    if (ctx['cond2']) {
      b1.children[1] = new TextBlock(\`2\`)
    }
    return b1;
  }
}"
`;

exports[`t-raw literal 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  class Block1 extends ContentBlock {
    static el = elem(\`<span><owl-anchor></owl-anchor></span>\`);
    children = new Array(1);
  }
  
  return ctx => {
    const b1 = new Block1();
    b1.children[0] = new HTMLBlock('ok');
    return b1;
  }
}"
`;

exports[`t-raw literal, no outside html element 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  
  return ctx => {
    const b1 = new MultiBlock(1);
    b1.children[0] = new HTMLBlock('ok');
    return b1;
  }
}"
`;

exports[`t-raw not escaping 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  class Block1 extends ContentBlock {
    static el = elem(\`<div><owl-anchor></owl-anchor></div>\`);
    children = new Array(1);
  }
  
  return ctx => {
    const b1 = new Block1();
    b1.children[0] = new HTMLBlock(ctx['var']);
    return b1;
  }
}"
`;

exports[`t-raw t-raw and another sibling node 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  class Block1 extends ContentBlock {
    static el = elem(\`<span><span>hello</span><owl-anchor></owl-anchor></span>\`);
    children = new Array(1);
  }
  
  return ctx => {
    const b1 = new Block1();
    b1.children[0] = new HTMLBlock(ctx['var']);
    return b1;
  }
}"
`;

exports[`t-raw variable 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  class Block1 extends ContentBlock {
    static el = elem(\`<span><owl-anchor></owl-anchor></span>\`);
    children = new Array(1);
  }
  
  return ctx => {
    const b1 = new Block1();
    b1.children[0] = new HTMLBlock(ctx['var']);
    return b1;
  }
}"
`;

exports[`t-set evaluate value expression 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  class Block1 extends ContentBlock {
    static el = elem(\`<div><owl-text></owl-text></div>\`);
    texts = new Array(1);
    update() {
      this.el.firstChild.textContent = toString(this.texts[0]);
    }
  }
  
  return ctx => {
    ctx = Object.create(ctx);
    const b1 = new Block1();
    ctx[\`value\`] = 1+2;
    b1.texts[0] = ctx['value'];
    return b1;
  }
}"
`;

exports[`t-set evaluate value expression, part 2 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  class Block1 extends ContentBlock {
    static el = elem(\`<div><owl-text></owl-text></div>\`);
    texts = new Array(1);
    update() {
      this.el.firstChild.textContent = toString(this.texts[0]);
    }
  }
  
  return ctx => {
    ctx = Object.create(ctx);
    const b1 = new Block1();
    ctx[\`value\`] = ctx['somevariable']+2;
    b1.texts[0] = ctx['value'];
    return b1;
  }
}"
`;

exports[`t-set set from attribute literal (no outside div) 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  
  return ctx => {
    ctx = Object.create(ctx);
    ctx[\`value\`] = 'ok';
    const b1 = new TextBlock(ctx['value'])
    return b1;
  }
}"
`;

exports[`t-set set from attribute literal 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  class Block1 extends ContentBlock {
    static el = elem(\`<div><owl-text></owl-text></div>\`);
    texts = new Array(1);
    update() {
      this.el.firstChild.textContent = toString(this.texts[0]);
    }
  }
  
  return ctx => {
    ctx = Object.create(ctx);
    const b1 = new Block1();
    ctx[\`value\`] = 'ok';
    b1.texts[0] = ctx['value'];
    return b1;
  }
}"
`;

exports[`t-set set from attribute lookup 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  class Block1 extends ContentBlock {
    static el = elem(\`<div><owl-text></owl-text></div>\`);
    texts = new Array(1);
    update() {
      this.el.firstChild.textContent = toString(this.texts[0]);
    }
  }
  
  return ctx => {
    ctx = Object.create(ctx);
    const b1 = new Block1();
    ctx[\`stuff\`] = ctx['value'];
    b1.texts[0] = ctx['stuff'];
    return b1;
  }
}"
`;

exports[`t-set set from body literal 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  
  return ctx => {
    ctx = Object.create(ctx);
    ctx[\`value\`] = \`ok\`;
    const b1 = new TextBlock(ctx['value'])
    return b1;
  }
}"
`;

exports[`t-set set from body lookup 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  class Block1 extends ContentBlock {
    static el = elem(\`<div><owl-text></owl-text></div>\`);
    texts = new Array(1);
    update() {
      this.el.firstChild.textContent = toString(this.texts[0]);
    }
  }
  
  return ctx => {
    ctx = Object.create(ctx);
    const b1 = new Block1();
    const b2 = new TextBlock(ctx['value'])
    ctx[\`stuff\`] = b2;
    b1.texts[0] = ctx['stuff'];
    return b1;
  }
}"
`;

exports[`t-set set from empty body 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  class Block1 extends ContentBlock {
    static el = elem(\`<div><owl-text></owl-text></div>\`);
    texts = new Array(1);
    update() {
      this.el.firstChild.textContent = toString(this.texts[0]);
    }
  }
  
  return ctx => {
    ctx = Object.create(ctx);
    const b1 = new Block1();
    ctx[\`stuff\`] = null;
    b1.texts[0] = ctx['stuff'];
    return b1;
  }
}"
`;

exports[`t-set t-set and t-if 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  class Block1 extends ContentBlock {
    static el = elem(\`<div><owl-anchor></owl-anchor></div>\`);
    children = new Array(1);
  }
  
  return ctx => {
    ctx = Object.create(ctx);
    const b1 = new Block1();
    ctx[\`v\`] = ctx['value'];
    if (ctx['v']==='ok') {
      b1.children[0] = new TextBlock(\`grimbergen\`)
    }
    return b1;
  }
}"
`;

exports[`t-set t-set body is evaluated immediately 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  class Block1 extends ContentBlock {
    static el = elem(\`<div><owl-anchor></owl-anchor></div>\`);
    children = new Array(1);
  }
  class Block2 extends ContentBlock {
    static el = elem(\`<span><owl-text></owl-text></span>\`);
    texts = new Array(1);
    update() {
      this.el.firstChild.textContent = toString(this.texts[0]);
    }
  }
  
  return ctx => {
    ctx = Object.create(ctx);
    const b1 = new Block1();
    ctx[\`v1\`] = 'before';
    const b2 = new Block2();
    b2.texts[0] = ctx['v1'];
    ctx[\`v2\`] = b2;
    ctx[\`v1\`] = 'after';
    b1.children[0] = new HTMLBlock(ctx['v2']);
    return b1;
  }
}"
`;

exports[`t-set t-set evaluates an expression only once 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  class Block1 extends ContentBlock {
    static el = elem(\`<div><owl-text></owl-text><owl-text></owl-text></div>\`);
    texts = new Array(2);
    update() {
      this.el.firstChild.textContent = toString(this.texts[0]);
      this.el.firstChild.nextSibling.textContent = toString(this.texts[1]);
    }
  }
  
  return ctx => {
    ctx = Object.create(ctx);
    const b1 = new Block1();
    ctx[\`v\`] = ctx['value']+' artois';
    b1.texts[0] = ctx['v'];
    b1.texts[1] = ctx['v'];
    return b1;
  }
}"
`;

exports[`t-set t-set with content and sub t-esc 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  class Block1 extends ContentBlock {
    static el = elem(\`<div><owl-text></owl-text></div>\`);
    texts = new Array(1);
    update() {
      this.el.firstChild.textContent = toString(this.texts[0]);
    }
  }
  
  return ctx => {
    ctx = Object.create(ctx);
    const b1 = new Block1();
    const b2 = new MultiBlock(2);
    b2.children[0] = new TextBlock(ctx['beep'])
    b2.children[1] = new TextBlock(\` boop\`)
    ctx[\`setvar\`] = b2;
    b1.texts[0] = ctx['setvar'];
    return b1;
  }
}"
`;

exports[`t-set t-set with t-value (falsy) and body 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  class Block1 extends ContentBlock {
    static el = elem(\`<div><owl-anchor></owl-anchor></div>\`);
    children = new Array(1);
  }
  class Block2 extends ContentBlock {
    static el = elem(\`<span><owl-text></owl-text></span>\`);
    texts = new Array(1);
    update() {
      this.el.firstChild.textContent = toString(this.texts[0]);
    }
  }
  
  return ctx => {
    ctx = Object.create(ctx);
    const b1 = new Block1();
    ctx[\`v3\`] = false;
    ctx[\`v1\`] = 'before';
    const b2 = new Block2();
    b2.texts[0] = ctx['v1'];
    ctx[\`v2\`] = withDefault(ctx['v3'], b2);
    ctx[\`v1\`] = 'after';
    ctx[\`v3\`] = true;
    b1.children[0] = new HTMLBlock(ctx['v2']);
    return b1;
  }
}"
`;

exports[`t-set t-set with t-value (truthy) and body 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  class Block1 extends ContentBlock {
    static el = elem(\`<div><owl-anchor></owl-anchor></div>\`);
    children = new Array(1);
  }
  class Block2 extends ContentBlock {
    static el = elem(\`<span><owl-text></owl-text></span>\`);
    texts = new Array(1);
    update() {
      this.el.firstChild.textContent = toString(this.texts[0]);
    }
  }
  
  return ctx => {
    ctx = Object.create(ctx);
    const b1 = new Block1();
    ctx[\`v3\`] = 'Truthy';
    ctx[\`v1\`] = 'before';
    const b2 = new Block2();
    b2.texts[0] = ctx['v1'];
    ctx[\`v2\`] = withDefault(ctx['v3'], b2);
    ctx[\`v1\`] = 'after';
    ctx[\`v3\`] = false;
    b1.children[0] = new HTMLBlock(ctx['v2']);
    return b1;
  }
}"
`;

exports[`t-set t-set, t-if, and mix of expression/body lookup, 1 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  class Block1 extends ContentBlock {
    static el = elem(\`<div><owl-anchor></owl-anchor><owl-anchor></owl-anchor><owl-text></owl-text></div>\`);
    children = new Array(2);
    texts = new Array(1);
    update() {
      this.anchors[0].nextSibling.textContent = toString(this.texts[0]);
    }
  }
  
  return ctx => {
    ctx = Object.create(ctx);
    const b1 = new Block1();
    if (ctx['flag']) {
      ctx[\`ourvar\`] = \`1\`;
    } else {
      ctx[\`ourvar\`] = 0;
    }
    b1.texts[0] = ctx['ourvar'];
    return b1;
  }
}"
`;

exports[`t-set t-set, t-if, and mix of expression/body lookup, 2 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  class Block1 extends ContentBlock {
    static el = elem(\`<div><owl-anchor></owl-anchor><owl-anchor></owl-anchor><owl-text></owl-text></div>\`);
    children = new Array(2);
    texts = new Array(1);
    update() {
      this.anchors[0].nextSibling.textContent = toString(this.texts[0]);
    }
  }
  
  return ctx => {
    ctx = Object.create(ctx);
    const b1 = new Block1();
    if (ctx['flag']) {
      ctx[\`ourvar\`] = 1;
    } else {
      ctx[\`ourvar\`] = \`0\`;
    }
    b1.texts[0] = ctx['ourvar'];
    return b1;
  }
}"
`;

exports[`t-set t-set, t-if, and mix of expression/body lookup, 3 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  
  return ctx => {
    ctx = Object.create(ctx);
    const b1 = new MultiBlock(2);
    if (ctx['flag']) {
      ctx[\`ourvar\`] = 1;
    } else {
      ctx[\`ourvar\`] = \`0\`;
    }
    b1.children[1] = new TextBlock(ctx['ourvar'])
    return b1;
  }
}"
`;

exports[`t-set value priority (with non text body 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  class Block1 extends ContentBlock {
    static el = elem(\`<div><owl-text></owl-text></div>\`);
    texts = new Array(1);
    update() {
      this.el.firstChild.textContent = toString(this.texts[0]);
    }
  }
  class Block2 extends ContentBlock {
    static el = elem(\`<span>2</span>\`);
  }
  
  return ctx => {
    ctx = Object.create(ctx);
    const b1 = new Block1();
    const b2 = new Block2();
    ctx[\`value\`] = withDefault(1, b2);
    b1.texts[0] = ctx['value'];
    return b1;
  }
}"
`;

exports[`t-set value priority 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  class Block1 extends ContentBlock {
    static el = elem(\`<div><owl-text></owl-text></div>\`);
    texts = new Array(1);
    update() {
      this.el.firstChild.textContent = toString(this.texts[0]);
    }
  }
  
  return ctx => {
    ctx = Object.create(ctx);
    const b1 = new Block1();
    ctx[\`value\`] = withDefault(1, \`2\`);
    b1.texts[0] = ctx['value'];
    return b1;
  }
}"
`;

exports[`white space handling consecutives whitespaces are condensed into a single space 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  class Block1 extends ContentBlock {
    static el = elem(\`<div> abc </div>\`);
  }
  
  return ctx => {
    const b1 = new Block1();
    return b1;
  }
}"
`;

exports[`white space handling nothing is done in pre tags 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  class Block1 extends ContentBlock {
    static el = elem(\`<pre>

        some text
      </pre>\`);
  }
  
  return ctx => {
    const b1 = new Block1();
    return b1;
  }
}"
`;

exports[`white space handling white space only text nodes are condensed into a single space 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  class Block1 extends ContentBlock {
    static el = elem(\`<div> </div>\`);
  }
  
  return ctx => {
    const b1 = new Block1();
    return b1;
  }
}"
`;

exports[`white space handling whitespace only text nodes with newlines are removed 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, getValues} = utils;
  
  class Block1 extends ContentBlock {
    static el = elem(\`<div><span>abc</span></div>\`);
  }
  
  return ctx => {
    const b1 = new Block1();
    return b1;
  }
}"
`;
